--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Всемп привет это мой сайт
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Мой космический проект</title>
+</head>
+<body>
+  <h1>Привет, Земля! 🌍</h1>
+  <p>Это мой первый сайт на GitHub. Я — Саша, 11 лет.</p>
+  <img src="https://i.imgur.com/5Gd8k0e.png" alt="Космос">
+</body>
+</html>
